--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "start-server": "nodemon server/server.js",
-    "test": "export NODE_ENV=test || SET NODE_ENV=test && jest tests/**/*.test.js --detectOpenHandles",
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && jest server/**/*.test.js --detectOpenHandles",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
@@ -17,5 +17,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "jest": "^23.4.1"
   }
 }
